# tax_app_webassembly

./: Cargo.toml  README.md  app.yaml  index.html  styles.css
.github/workflows/: rust.yml
src/: lib.rs
tests/: calculate_tax.rs  update_element.rs
