[package]
name = "tax_app_webassembly"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.95"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3.72", features = ["Window", "Document", "Element"] }

[lib]
crate-type = ["cdylib", "rlib"]
#cdylib for building WebAssembly
#rlib allow to use lib in tests